--- a/zaliczenie/wwwroot/index.html
+++ b/zaliczenie/wwwroot/index.html
@@ -35,7 +35,7 @@
 
     <div id="app">
       <div class="loader">
-          <div class="loader-text">Trwa ładowanie strony ...</div>
+          <div class="loader-text">Trwa ładowanie strony ....</div>
       </div>
     </div>
 
